--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
 
         <provider
-            android:name="TaskListProvider"
+            android:name=".TaskListProvider"
             android:authorities="com.example.rlam.ckl8_250_homework2"
             android:exported="false" />
 
@@ -26,7 +26,10 @@
             android:name=".TaskDetailActivity"
             android:label="@string/title_activity_detail" >
         </activity>
-
+        <activity
+            android:name=".AddTaskActivity"
+            android:label="@string/title_activity_add_task" >
+        </activity>
     </application>
 
 </manifest>
